--- a/test.html
+++ b/test.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>myHouse</title>
+  <title>webpack demo</title>
 </head>
 
 <body>
-
+  <div>11</div>
 </body>
 
 </html>
